--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
 </head>
 
 <body class="debug">
-    <div class="conteiner">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3>
-                    Esercizi per casa
-                </h3>
-            </div>
-        </div>
+    <div class="container">
+        <h3>
+            Esercizi per casa
+        </h3>
         <div class="row">
             <div class="col-xs-1">
                 <div class="box">col1</div>
@@ -104,8 +100,8 @@
 
         <div class="row">
             <div class="col-xs-6">
-                <div class="box">
-                    <div class="container row">
+                <div class="box heauto">
+                    <div class="container row p-10">
                         <div class="col-xs-2">
                             <div class="green">col2</div>
                         </div>
@@ -119,8 +115,8 @@
                 </div>
             </div>
             <div class="col-xs-6">
-                <div class="box">
-                    <div class="container row">
+                <div class="box heauto">
+                    <div class="container row p-10">
                         <div class="col-xs-6">
                             <div class="green">col6</div>
                         </div>
@@ -132,7 +128,7 @@
             </div>
         </div>
     </div>
-    <div class="conteiner he50">
+    <div class="container he50">
         <div class="row">
             <div class="col-xs-offset-12"></div>
         </div>
@@ -192,7 +188,76 @@
             </div>
         </div>
     </div>
-        
+    
+    <h3>offset</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-offset-11"></div>
+            <div class="col-xs-1">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-10"></div>
+            <div class="col-xs-2">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-9"></div>
+            <div class="col-xs-3">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-8"></div>
+            <div class="col-xs-4">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-7"></div>
+            <div class="col-xs-5">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-6"></div>
+            <div class="col-xs-6">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-5"></div>
+            <div class="col-xs-7">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-4"></div>
+            <div class="col-xs-8">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-3"></div>
+            <div class="col-xs-9">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-2"></div>
+            <div class="col-xs-10">
+                <div class="box"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-offset-1"></div>
+            <div class="col-xs-11">
+                <div class="box"></div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
