finito con bonus

--- a/index.html
+++ b/index.html
@@ -258,6 +258,128 @@
             </div>
         </div>
     </div>
+
+    <h3>nested</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-7">
+                <div class="box heauto">
+                    <div class="container row p-10">
+                        <div class="col-xs-2">
+                            <div class="green"></div>
+                        </div>
+                        <div class="col-xs-8">
+                            <div class="green"></div>
+                        </div>
+                        <div class="col-xs-2">
+                            <div class="green"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-5">
+                <div class="box heauto">
+                    <div class="container row p-10">
+                        <div class="col-xs-6">
+                            <div class="green"></div>
+                        </div>
+                        <div class="col-xs-6">
+                            <div class="green"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <h3>aligment</h3>
+    <div class="container">
+        <div class="row justify-start">
+            <div class="col-xs-7 ">
+                <div class="box">
+                    start
+                </div>
+            </div>
+        </div>
+        <div class="row  justify-center">
+            <div class="col-xs-7">
+                <div class="box">
+                    center
+                </div>
+            </div>
+        </div>
+        <div class="row  justify-end">
+            <div class="col-xs-7">
+                <div class="box">
+                    end
+                </div>
+            </div>
+        </div>
+        <div class="row aling-top">
+            <div class="col-xs-6">
+                <div class="box he100"></div>
+            </div>
+            <div class="col-xs-6">
+                <div class="box">top</div>
+            </div>
+        </div>
+        <div class="row aling-center">
+            <div class="col-xs-6">
+                <div class="box he100"></div>
+            </div>
+            <div class="col-xs-6">
+                <div class="box">center</div>
+            </div>
+        </div>
+        <div class="row aling-bottom">
+            <div class="col-xs-6">
+                <div class="box he100"></div>
+            </div>
+            <div class="col-xs-6">
+                <div class="box">bottom</div>
+            </div>
+        </div>  
+    </div>
+    
+    <h3>justify content</h3>
+    <div class="container">
+        <h4>space around</h4>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box heauto">
+                    <div class="container row p-10 justify-around">
+                        <div class="col-xs-2">
+                            <div class="green"></div>
+                        </div>
+                        <div class="col-xs-2">
+                            <div class="green"></div>
+                        </div>
+                        <div class="col-xs-2">
+                            <div class="green"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h4>space between</h4>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box heauto">
+                    <div class="container row p-10 justify-between">
+                        <div class="col-xs-2">
+                            <div class="green"></div>
+                        </div>
+                        <div class="col-xs-2">
+                            <div class="green"></div>
+                        </div>
+                        <div class="col-xs-2">
+                            <div class="green"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
