--- a/index.html
+++ b/index.html
@@ -16,40 +16,40 @@
             Esercizi per casa
         </h3>
         <div class="row">
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
-            <div class="col-xs-1">
+            <div class="col-xs-1 col-lg-4">
                 <div class="box">col1</div>
             </div>
         </div>
