--- a/index.html
+++ b/index.html
@@ -92,28 +92,28 @@
             </div>
             
             <div class="col-xs-6">
-                <div class="box heauto">
+                <div class="box ">
                     <div class="container row p-10">
                         <div class="col-xs-2">
-                            <div class="green">col2</div>
+                            <div class="box green">col2</div>
                         </div>
                         <div class="col-xs-2">
-                            <div class="green">col2</div>
+                            <div class="box green">col2</div>
                         </div>
                         <div class="col-xs-8">
-                            <div class="green">col8</div>
+                            <div class="box green">col8</div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-xs-6">
-                <div class="box heauto">
+                <div class="box ">
                     <div class="container row p-10">
                         <div class="col-xs-6">
-                            <div class="green">col6</div>
+                            <div class="box green">col6</div>
                         </div>
                         <div class="col-xs-6">
-                            <div class="green">col6</div>
+                            <div class="box green">col6</div>
                         </div>
                     </div>
                 </div>
@@ -202,28 +202,28 @@
         <h3>nested</h3>
         <div class="row">
             <div class="col-xs-7">
-                <div class="box heauto">
+                <div class="box ">
                     <div class="container row p-10">
                         <div class="col-xs-2">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                         <div class="col-xs-8">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                         <div class="col-xs-2">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-xs-5">
-                <div class="box heauto">
+                <div class="box ">
                     <div class="container row p-10">
                         <div class="col-xs-6">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                         <div class="col-xs-6">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                     </div>
                 </div>
@@ -285,16 +285,16 @@
         <h4>space around</h4>
         <div class="row">
             <div class="col-xs-12">
-                <div class="box heauto">
+                <div class="box ">
                     <div class="container row p-10 justify-around">
                         <div class="col-xs-2">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                         <div class="col-xs-2">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                         <div class="col-xs-2">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                     </div>
                 </div>
@@ -303,16 +303,16 @@
         <h4>space between</h4>
         <div class="row">
             <div class="col-xs-12">
-                <div class="box heauto">
+                <div class="box ">
                     <div class="container row p-10 justify-between">
                         <div class="col-xs-2">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                         <div class="col-xs-2">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                         <div class="col-xs-2">
-                            <div class="green"></div>
+                            <div class="box green"></div>
                         </div>
                     </div>
                 </div>
